--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "junk"
+name = "sfu"
 version = "0.1.0"
 edition = "2021"
 
@@ -16,5 +16,9 @@ opt-level = 3
 
 [dependencies]
 bevy = "0.12.1"
+bevy_editor_pls = { version = "0.6.0", optional = true }
 leafwing-input-manager = "0.11.2"
 rand = "0.8.5"
+
+[features]
+editor = ["bevy_editor_pls"]
