--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ opt-level = 3
 [dependencies]
 bevy = "0.12.1"
 bevy_editor_pls = { version = "0.6.0", optional = true }
+bevy_rapier3d = "0.23.0"
 leafwing-input-manager = "0.11.2"
 rand = "0.8.5"
 
