--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ opt-level = 1
 opt-level = 3
 
 [dependencies]
-bevy = "0.12.1"
+bevy = { version = "0.12.1", features = ["jpeg", "wayland"] }
 bevy_editor_pls = { version = "0.6.0", optional = true }
 bevy_rapier3d = "0.23.0"
 leafwing-input-manager = "0.11.2"
