--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,21 @@ opt-level = 1
 opt-level = 3
 
 [dependencies]
-bevy = { version = "0.12.1", features = ["jpeg", "wayland"] }
+bevy = { version = "0.12.1", default-features = false, features = [
+    "multi-threaded",
+    "bevy_asset",
+    "bevy_scene",
+    "bevy_winit",
+    "bevy_render",
+    "bevy_pbr",
+    "bevy_gltf",
+    "bevy_text",
+    "bevy_ui",
+    "jpeg",
+    "png",
+    "wayland",
+    "x11",
+] }
 bevy_editor_pls = { version = "0.6.0", optional = true }
 bevy_rapier3d = "0.23.0"
 leafwing-input-manager = "0.11.2"
