--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -6,10 +6,9 @@ on:
       - '*'
 
 env:
-  # update with the name of the main binary
   binary: sfu
   add_binaries_to_github_release: true
-  #itch_target: <itch.io-username>/<game-name>
+  itch_target: matstevenson/sfu
 
 
 jobs:
