--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ bevy = { version = "0.12.1", default-features = false, features = [
     "png",
     "wayland",
     "x11",
+    "webgl2",
 ] }
 bevy_editor_pls = { version = "0.6.0", optional = true }
 bevy_rapier3d = "0.23.0"
