--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ bevy = { version = "0.12.1", default-features = false, features = [
     "bevy_scene",
     "bevy_winit",
     "bevy_render",
+    "bevy_core_pipeline",
     "bevy_pbr",
     "bevy_gltf",
     "bevy_text",
@@ -32,6 +33,7 @@ bevy = { version = "0.12.1", default-features = false, features = [
     "webgl2",
 ] }
 bevy_editor_pls = { version = "0.6.0", optional = true }
+bevy_framepace = "0.14.1"
 bevy_rapier3d = "0.23.0"
 leafwing-input-manager = "0.11.2"
 rand = "0.8.5"
